# vast

./: .gitignore  .gitmodules  .vast.cbp  CMakeLists.txt  Config.xml  Config.xml.example  Makefile  README  README.md  TODO  bgt.cpp  fitting.C  peaks.in  plot.gp  vast.cbp
CMake/modules/: FindUnitTest++.cmake
Calculators/include/: BGTCalculator.hpp  EffCalculator.hpp  ErrorCalculator.hpp  Integrator.hpp  NeutronDensity.hpp  ParamCalculator.hpp
Calculators/source/: BGTCalculator.cpp  CMakeLists.txt  EffCalculator.cpp  ErrorCalculator.cpp  Integrator.cpp  NeutronDensity.cpp  ParamCalculator.cpp
Calculators/tests/: CMakeLists.txt  test_paramcalculator.cpp
Configurations/: 084ga.xml  example.xml  response.xml  test_configuration.xml
Core/include/: CrystalBallParameters.hpp  Decay.hpp  Exception.hpp  Experiment.hpp  FitHandler.hpp  FlagHandler.hpp  Gamma.hpp  Neutron.hpp  StringManipulation.hpp  VastExceptions.hpp  mainPage.hpp
Core/source/: CMakeLists.txt  CrystalBallParameters.cpp  Decay.cpp  Gamma.cpp  Neutron.cpp  vast.cpp
Core/tests/: CMakeLists.txt  test_crystalballparameters.cpp  test_exception.cpp  test_stringmanipulation.cpp  unittest-CrystalBallParameters.cpp  unittest-StringManipulation.cpp  unittest-VastExceptions.cpp
Documentation/: Doxyfile
Documentation/logbook/: logbook.tex
Documentation/logbook/2014/: 06-jun.tex  07-jul.tex  10-oct.tex
FileIo/: CMakeLists.txt
FileIo/include/: ConfigurationReader.hpp  FileChecker.hpp  FileHandler.hpp  InputHandler.hpp  OutputHandler.hpp  XmlInterface.hpp
FileIo/source/: CMakeLists.txt  Configuration.cpp  ConfigurationReader.cpp  FileChecker.cpp  FileHandler.cpp  InputHandler.cpp  OutputHandler.cpp  XmlInterface.cpp
FileIo/tests/: CMakeLists.txt  cfgtst.cpp  test_configuration.cpp  unittest-ConfigurationReader.cpp
Fitters/include/: SimConvoluter.hpp  TofFitter.hpp
Fitters/source/: CMakeLists.txt  SimConvoluter.cpp  TofFitter.cpp
Fitters/tests/: CMakeLists.txt  simtest.cpp  test_toffitter.cpp
Resources/include/: HelperEnumerations.hpp  IoHelperFunctions.hpp  UnittestConfigurations.hpp
Scripts/: densities.gp  statsig.gp
Share/: CMakeLists.txt
Share/modulefiles/: vast
Submodules/: CMakeLists.txt
Submodules/include/: PhysConstants.hpp  Variable.hpp  ezETAProgressBar.hpp
Utilities/: CMakeLists.txt
Utilities/ResponseFunctionAnalyzer/: CMakeLists.txt
Utilities/ResponseFunctionAnalyzer/include/: ResponseFunctionAnalyzer.hpp
Utilities/ResponseFunctionAnalyzer/source/: CMakeLists.txt  ResponseFunctionAnalyzer.cpp  responseFunctionAnalyzer.cpp
Utilities/include/: LimitFinder.hpp
Utilities/source/: CMakeLists.txt  LimitFinder.cpp  efficiency.cpp  sensitivity.cpp
cgmStage/: runInterface.bash
configs/: 077cu.xml  Config.xml.077cu  Config.xml.084ga  Config.xml.response  Config.xml.test  example.xml  test.xml  test_configuration.xml
doc/: Doxyfile  doxyfile
doc/logbook/: logbook.tex
doc/logbook/2013/: 11-nov.tex  12-dec.tex
doc/logbook/2014/: 08-aug.tex  09-sep.tex  10-oct.tex
docs/logbook/2013/: 10-oct.tex
inc/: BGTCalculator.hpp  Configuration.hpp  Decay.hpp  DensityCalculator.hpp  EffCalculator.hpp  ErrorCalculator.hpp  Experiment.hpp  FileChecker.hpp  FileHandler.hpp  FitHandler.hpp  FlagHandler.hpp  Gamma.hpp  InputHandler.hpp  Integrator.hpp  LimitFinder.hpp  Neutron.hpp  NeutronDensity.hpp  OutputHandler.hpp  ParamCalculator.hpp  SimConvoluter.hpp  TofFitter.hpp  doxygenMainPage.hpp  mainPage.hpp
include/: ModelBuilder.hpp  ToFFitter.hpp  func.hpp
results/: working.fit  working.out
results/077cu-ban4-betaCut/: 077cu-ban4-betaCut-tof-.fit  077cu-ban4-betaCut-tof-02Plus.fit  077cu-ban4-betaCut-tof.fit
results/077cu-ban4-lower/: 077cu-ban4-lower-tof-02Plus-noConv.fit  077cu-ban4-lower-tof-02Plus-noConv.out  077cu-ban4-lower-tof-02Plus.fit  077cu-ban4-lower-tof-02Plus.out  077cu-ban4-lower-tof-04Plus-noConv.fit  077cu-ban4-lower-tof-04Plus-noConv.out  077cu-ban4-lower-tof-04Plus.fit  077cu-ban4-lower-tof-04Plus.out  077cu-ban4-lower-tof-GS02.fit  077cu-ban4-lower-tof-mcStudy.fit  077cu-ban4-lower-tof-noConv.fit  077cu-ban4-lower-tof-noConv.out  077cu-ban4-lower-tof.fit  077cu-ban4-lower-tof.out
results/084ga-mmf/: 084ga-tof-sGated.fit
results/tofSim/: 0069keV.fit  0113keV.fit  0152keV.fit  0209keV.fit  0298keV.fit  0300keV.fit  0441keV.fit  0613keV.fit  0908keV.fit  1000keV.fit  1373keV.fit  2097keV.fit  5000keV.fit  all.fit  comp.fit  convParam.fit
results/tofs_3.4keVee/: 0069keV.fit  0113keV.fit  0152keV.fit  0209keV.fit  0298keV.fit  0300keV.fit  0440keV.fit  0613keV.fit  0908keV.fit  1000keV.fit  1373keV.fit  2097keV.fit  3181keV.fit  5000keV.fit  comp.fit
results/tofs_6keVee/: 0069keV.fit  0113keV.fit  0153keV.fit  0209keV.fit  0298keV.fit  0300keV.fit  0441keV.fit  0613keV.fit  0908keV.fit  1000keV.fit  1374keV.fit  2098keV.fit  3182keV.fit  5000keV.fit  comp.fit
results/tofs_8keVee/: 0069keV.fit  0113keV.fit  0152keV.fit  0209keV.fit  0298keV.fit  0300keV.fit  0441keV.fit  0613keV.fit  0908keV.fit  1000keV.fit  1373keV.fit  2097keV.fit  5000keV.fit
roofitOld/: Makefile
roofitOld/src/: ModelBuilder.cpp  calcConsts.cpp  compFit.gp  fitting.cpp  fmtSimResult.bash
scripts/: bgt.C  compCgm.gp  convParam.gp  densities.gp  plot.C  plot.gp  plotsim.C  statsig.gp
src/: BGTCalculator.cpp  Configuration.cpp  Decay.cpp  DensityCalculator.cpp  EffCalculator.cpp  ErrorCalculator.cpp  FileChecker.cpp  FileHandler.cpp  FitHandler.cpp  Gamma.cpp  Integrator.cpp  LimitFinder.cpp  Neutron.cpp  NeutronDensity.cpp  OutputHandler.cpp  ParamCalculator.cpp  SimConvoluter.cpp  ToFFitter.cpp  TofFitter.cpp  bgt.cpp  cfgtst.cpp  compFit.gp  compPlot.gp  convParam.cpp  convParam.gp  eff.cpp  ex.cpp  fitting.cpp  fmtResult.bash  func.cpp  main.cpp  mcStudy-yield.cpp  param.cpp  param.gp  parse.cpp  plot.gp  sensitivity.cpp  simtest.cpp
